--- a/app/globals.css
+++ b/app/globals.css
@@ -7,9 +7,12 @@
 }
 
 body.mobile-visible {
-  position: fixed;
   width: 100%;
   height: 100%;
+}
+
+body.mobile-visible #page-content {
+  overflow: hidden;
 }
 
 .jtron {
